--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
               <iframe
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=ft_uRk7rKgWasQxa"
                 title="YouTube video player"
-                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen
@@ -92,7 +91,6 @@
               <iframe
                 src="https://www.youtube.com/embed/st571DYYTR8?si=n5z2rAdWbwCZCA_1"
                 title="YouTube video player"
-                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen
@@ -104,11 +102,11 @@
             </div>
           </div>
         </section>
-        <section class="reservation"></section>
+        <section class="reservation" id="book-a-table"></section>
         <section class="menu" id="menu"></section>
-        <section class="about"></section>
+        <section class="about" id="contacts"></section>
       </main>
-      <footer class="footer" id="contacts"></footer>
+      <footer class="footer"></footer>
     </div>
   </body>
 </html>
