--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
         </section>
         <section class="reservation" id="book-a-table">
           <h2 class="reservation__title">Book a table</h2>
-          <form action="" class="reservation__form form">
+          <form class="reservation__form form">
             <fieldset class="form__fieldset">
-              <label for="" class="form__label"
+              <label for="name" class="form__label"
                 >Name *
                 <input
                   type="text"
@@ -118,11 +118,11 @@
                 >Number of guests *
                 <input type="number" class="form__input" placeholder=" 1-8" />
               </label>
-              <label for="" class="form__label"
+              <label for="date" class="form__label"
                 >Date & time *
                 <input type="datetime-local" class="form__input" />
               </label>
-              <label for="" class="form__label"
+              <label for="email" class="form__label"
                 >Your email *
                 <input
                   type="email"
@@ -132,7 +132,7 @@
               </label>
             </fieldset>
             <button class="form__button">Book a table</button>
-            <label for="" class="form__label form__label_type_checkbox">
+            <label for="checkbox" class="form__label form__label_type_checkbox">
               <input type="checkbox" class="form__checkbox" />
               I aggree with terms of use
             </label>
