--- a/index.html
+++ b/index.html
@@ -112,15 +112,25 @@
                   type="text"
                   class="form__input"
                   placeholder=" Name Surname"
+                  id="name"
                 />
               </label>
-              <label for="" class="form__label"
+              <label for="number-of-guest" class="form__label"
                 >Number of guests *
-                <input type="number" class="form__input" placeholder=" 1-8" />
+                <input
+                  type="number"
+                  class="form__input"
+                  placeholder=" 1-8"
+                  id="number-of-guest"
+                />
               </label>
-              <label for="date" class="form__label"
+              <label for="datetime-local" class="form__label"
                 >Date & time *
-                <input type="datetime-local" class="form__input" />
+                <input
+                  type="datetime-local"
+                  class="form__input"
+                  id="datetime-local"
+                />
               </label>
               <label for="email" class="form__label"
                 >Your email *
@@ -128,12 +138,13 @@
                   type="email"
                   class="form__input"
                   placeholder=" email@email.com"
+                  id="email"
                 />
               </label>
             </fieldset>
             <button class="form__button">Book a table</button>
             <label for="checkbox" class="form__label form__label_type_checkbox">
-              <input type="checkbox" class="form__checkbox" />
+              <input type="checkbox" class="form__checkbox" id="checkbox" />
               I aggree with terms of use
             </label>
           </form>
