New update for my project

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                   class="form__input"
                   placeholder=" Name Surname"
                   id="name"
+                  required
                 />
               </label>
               <label for="number-of-guest" class="form__label"
@@ -122,6 +123,7 @@
                   class="form__input"
                   placeholder=" 1-8"
                   id="number-of-guest"
+                  required
                 />
               </label>
               <label for="datetime-local" class="form__label"
@@ -130,6 +132,7 @@
                   type="datetime-local"
                   class="form__input"
                   id="datetime-local"
+                  required
                 />
               </label>
               <label for="email" class="form__label"
@@ -139,6 +142,7 @@
                   class="form__input"
                   placeholder=" email@email.com"
                   id="email"
+                  required
                 />
               </label>
             </fieldset>
@@ -260,7 +264,7 @@
               <li class="footer__list-item">
                 <a href="#" class="footer__social-link">
                   <img
-                    src="/images/facebook_white.svg"
+                    src="./images/facebook_white.svg"
                     alt="Facebook Logo"
                     class="footer__social-icon"
                   />Facebook
@@ -269,7 +273,7 @@
               <li class="footer__list-item">
                 <a href="#" class="footer__social-link">
                   <img
-                    src="/images/instagram_white.svg"
+                    src="./images/instagram_white.svg"
                     alt="Instagram Logo"
                     class="footer__social-icon"
                   />Instagram
